# Lite3_highlevel_sdk

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
bridge/: network_codes.hpp  network_codes.py
cpp/include/lite3_highlevel/: bridge.hpp  lite3_highlevel.hpp  observation.hpp  onnx_runner.hpp  types.hpp
cpp/src/: onnx_runner.cpp
examples/: safe_test_controller.py  simple_controller.cpp  simple_controller.py
python/lite3_highlevel/: __init__.py  bridge.py  network_codes.py  observation.py  onnx_runner.py
